--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@mui/joy": "^5.0.0-beta.29"
+    "@mui/joy": "^5.0.0-beta.29",
+    "@types/redux-persist": "^4.3.1"
   }
 }
